--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^4.2.2",
+    "@mantine/dropzone": "^4.2.2",
+    "@mantine/hooks": "^4.2.2",
+    "firebase": "^9.8.0",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "tabler-icons-react": "^1.47.0"
   },
@@ -26,6 +33,7 @@
     "@types/react-dom": "18.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   }
 }
