--- a/package.json
+++ b/package.json
@@ -9,31 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mantine/core": "^4.2.2",
-    "@mantine/dropzone": "^4.2.2",
-    "@mantine/hooks": "^4.2.2",
-    "firebase": "^9.8.0",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.0",
+    "@mantine/core": "^4.2.4",
+    "@mantine/dropzone": "^4.2.4",
+    "@mantine/hooks": "^4.2.4",
+    "@types/react-pdf": "^5.7.2",
+    "autoprefixer": "^9.8.8",
+    "firebase": "^9.8.1",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "postcss": "^7.0.39",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-firebase-hooks": "^5.0.3",
-    "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
-    "tabler-icons-react": "^1.47.0"
+    "react-pdf": "^5.7.2",
+    "react-pdf-to-image": "^1.0.2",
+    "recoil": "^0.7.3-alpha.2",
+    "tabler-icons-react": "^1.48.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.31",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "eslint": "8.14.0",
+    "@types/node": "17.0.33",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.6.4"
   }
 }
