--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/react-pdf": "^5.7.2",
     "firebase": "^9.8.1",
     "focus-visible": "^5.2.0",
-    "next": "12.1.6",
+    "framer-motion": "^6.3.3",
+    "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -26,6 +27,7 @@
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
     "react-pdf-to-image": "^1.0.2",
+    "react-sizeme": "^3.0.2",
     "recoil": "^0.7.3-alpha.2",
     "tabler-icons-react": "^1.48.0"
   },
