--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^4.2.4",
     "@mantine/dropzone": "^4.2.4",
     "@mantine/hooks": "^4.2.4",
+    "@react-pdf-viewer/core": "^3.3.2",
     "@types/react-pdf": "^5.7.2",
     "firebase": "^9.8.1",
     "focus-visible": "^5.2.0",
@@ -24,6 +25,7 @@
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.1",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
     "react-pdf-to-image": "^1.0.2",
