--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@mantine/hooks": "^4.2.4",
     "@react-pdf-viewer/core": "^3.3.2",
     "@types/react-pdf": "^5.7.2",
+    "countapi-js": "^1.0.2",
     "firebase": "^9.8.1",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^6.3.4",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
